<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonateActivity">

    <Button
        android:id="@+id/DonateContBtn"
        style="@style/btnOrangeMain"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/DonateContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDBulkBtn6" />

    <Button
        android:id="@+id/Rs10"
        style="@style/btnOrangeMain"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/rs_10"
        app:layout_constraintEnd_toStartOf="@+id/Rs25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DonateAmount" />

    <Button
        android:id="@+id/Rs250"
        style="@style/btnOrangeMain"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/rs_100"
        app:layout_constraintEnd_toStartOf="@+id/addDBulkBtn6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rs10" />

    <Button
        android:id="@+id/Rs50"
        style="@style/btnOrangeMain"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/rs_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Rs25"
        app:layout_constraintTop_toBottomOf="@+id/DonateAmount" />

    <Button
        android:id="@+id/CustomAmount"
        style="@style/btnBlack"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addDBulkBtn6"
        app:layout_constraintTop_toBottomOf="@+id/Rs50" />

    <Button
        android:id="@+id/Rs25"
        style="@style/btnOrangeMain"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/rs_25"
        app:layout_constraintEnd_toStartOf="@+id/Rs50"
        app:layout_constraintStart_toEndOf="@+id/Rs10"
        app:layout_constraintTop_toBottomOf="@+id/DonateAmount" />

    <Button
        android:id="@+id/addDBulkBtn6"
        style="@style/btnOrangeMain"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rs_250"
        app:layout_constraintEnd_toStartOf="@+id/CustomAmount"
        app:layout_constraintStart_toEndOf="@+id/Rs250"
        app:layout_constraintTop_toBottomOf="@+id/Rs25" />

    <EditText
        android:id="@+id/DonateAmount"
        style="@style/input"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/rs"
        android:inputType="number"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView8"
        style="@style/normalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_description"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        style="@style/orangeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/Donate"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <ImageView
        android:id="@+id/menuHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_baseline_format_line_spacing_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuHome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_baseline_home_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView37"
        style="@style/normalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Donate"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>