<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    tools:context=".activites.isuru.LoginActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/orangeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        style="@style/normalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_hope_generously"
        app:layout_constraintEnd_toEndOf="@+id/logEmail"
        app:layout_constraintStart_toStartOf="@+id/logEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/logEmail"
        style="@style/input"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:paddingStart="15dp"
        android:hint="@string/username_text"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/logPwd"
        app:layout_constraintStart_toStartOf="@+id/logPwd"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/logPwd"
        style="@style/input"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:paddingStart="15dp"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/logBtnMain"
        app:layout_constraintStart_toStartOf="@+id/logBtnMain"
        app:layout_constraintTop_toBottomOf="@+id/logEmail"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/forgetPw"
        style="@style/normalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/forget_password"
        android:textColor="@color/lightRed"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logPwd" />

    <TextView
        android:id="@+id/textView4"
        style="@style/normalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/account_alert"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logBtnMain" />

    <TextView
        android:id="@+id/regLogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/sign_up"
        android:textColor="@color/orangeMainColor"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logBtnMain" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.Material.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logBtnMain"
        style="@style/btnOrangeMain"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="170dp"
        android:text="@string/let_s_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>